updated index with logo

--- a/components/header.html
+++ b/components/header.html
@@ -37,7 +37,7 @@ Aligned brand, bilingual dropdown, and mobile menu
           <li><a href="index-fa.html"><img src="https://flagcdn.com/16x12/ir.png" /> فارسی</a></li>
         </ul>
       </div>
-      <a href="contact.html" class="btn-primary get-started">Get Started</a>
+      <a href="contact.html" class="btn-primary get-started">Login</a>
     </div>
 
     <!-- ☰ Mobile Menu Toggle -->
