--- a/components/header.html
+++ b/components/header.html
@@ -33,8 +33,8 @@ Aligned brand, bilingual dropdown, and mobile menu
           <img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English ▾
         </button>
         <ul class="lang-menu" id="lang-menu" role="listbox">
-          <li><a href="index.html"><img src="https://flagcdn.com/16x12/gb.png" /> English</a></li>
-          <li><a href="index-fa.html"><img src="https://flagcdn.com/16x12/ir.png" /> فارسی</a></li>
+          <li><a href="index.html">English</a></li>
+          <li><a href="index-fa.html">فارسی</a></li>
         </ul>
       </div>
       <!-- <a href="contact.html" class="btn-primary get-started">Login</a>-->
