Update Persian language button to use flag emoji

--- a/components/header-fa.html
+++ b/components/header-fa.html
@@ -30,7 +30,7 @@
     <div class="nav-actions">
       <div class="lang-switch">
         <button class="lang-toggle" id="lang-btn" aria-haspopup="listbox" aria-expanded="false">
-          <img src="https://flagcdn.com/16x12/ir.png" alt="Persian flag" /> فارسی ▾
+          فارسی 🇮🇷▾
         </button>
         <ul class="lang-menu" id="lang-menu" role="listbox">
           <li><a href="index.html">🇬🇧 English</a></li>
