Replace language flag images with emoji flags2

--- a/components/header.html
+++ b/components/header.html
@@ -30,11 +30,11 @@ Aligned brand, bilingual dropdown, and mobile menu
     <div class="nav-actions">
       <div class="lang-switch">
         <button class="lang-toggle" id="lang-btn" aria-haspopup="listbox" aria-expanded="false">
-          <img src="https://flagcdn.com/16x12/gb.png" alt="English flag" /> English ▾
+           🇬🇧 English ▾
         </button>
         <ul class="lang-menu" id="lang-menu" role="listbox">
-          <li><a href="index.html">English</a></li>
-          <li><a href="index-fa.html">فارسی</a></li>
+          <li><a href="index.html">🇬🇧 English</a></li>
+          <li><a href="index-fa.html">فارسی 🇮🇷</a></li>
         </ul>
       </div>
       <!-- <a href="contact.html" class="btn-primary get-started">Login</a>-->
