pathe in header and footer changed

--- a/components/footer.html
+++ b/components/footer.html
@@ -39,12 +39,12 @@ Clean Structure • SEO Friendly • Works in All Pages
     <div class="footer-col">
       <h4>Quick Links</h4>
       <ul>
-        <li><a href="/index.html#home">Home</a></li>
-        <li><a href="/index.html#about">About</a></li>
-        <li><a href="/index.html#services">Services</a></li>
-        <li><a href="/index.html#courses">Courses</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-        <li><a href="/blog/index-blog.html">Blog</a></li>
+        <li><a href="/#home">Home</a></li>
+        <li><a href="/l#about">About</a></li>
+        <li><a href="/#services">Services</a></li>
+        <li><a href="/#courses">Courses</a></li>
+        <li><a href="/pages/contact.html">Contact</a></li>
+        <li><a href="/pages/blog/index-blog.html">Blog</a></li>
       </ul>
     </div>
 
@@ -75,9 +75,9 @@ Clean Structure • SEO Friendly • Works in All Pages
     <div class="footer-bottom-inner">
       <span>© 2025 Bita Digital Hub. All rights reserved.</span>
       <div class="footer-links">
-        <a href="/privacy.html">Privacy Policy</a>
-        <a href="/terms.html">Terms of Service</a>
-        <a href="/cookies.html">Cookie Policy</a>
+        <a href="../pages/privacy.html">Privacy Policy</a>
+        <a href="../psges/terms.html">Terms of Service</a>
+        <a href="../pages/cookies.html">Cookie Policy</a>
       </div>
     </div>
   </div>
