--- a/components/header-blog.html
+++ b/components/header-blog.html
@@ -2,7 +2,7 @@
   <div class="blog-nav">
 
     <!-- Logo -->
-    <a href="../index.html" class="brand-link">
+    <a href="../pages/index.html" class="brand-link">
       <img src="../assets/taskhub-logo.svg" 
            alt="Bita Digital Hub Logo"
            class="brand-logo" />
@@ -15,7 +15,7 @@
 
     <!-- Back Button -->
     <nav class="nav-links" id="blog-nav-links">
-      <a href="../index.html" class="btn-primary back-btn">Back to Home</a>
+      <a href="../pages/index.html" class="btn-primary back-btn">Back to Home</a>
     </nav>
 
     <!-- Mobile Menu -->
