--- a/components/header.html
+++ b/components/header.html
@@ -7,7 +7,7 @@ Clean, SEO-Friendly, Global Navigation + Mobile Menu
   <div class="nav-inner">
 
     <!-- 🔹 Brand -->
-    <a href="/index.html" class="brand-link">
+    <a href="/pages/index.html" class="brand-link">
       <img src="/assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" class="brand-logo" />
       <div class="brand-info">
         <span class="brand-title">Bita Digital Hub</span>
@@ -22,7 +22,7 @@ Clean, SEO-Friendly, Global Navigation + Mobile Menu
       <a href="/#tools">Tools</a>
       <a href="/#services">Services</a>
       <a href="/#courses">Courses</a>
-      <a href="/blog/index-blog.html">Blog</a>
+      <a href="../pages/blog/index-blog.html">Blog</a>
       <a href="/#contact">Contact</a>
     </div>
 
@@ -33,8 +33,8 @@ Clean, SEO-Friendly, Global Navigation + Mobile Menu
           🇬🇧 English ▾
         </button>
         <ul class="lang-menu" id="lang-menu" role="listbox">
-          <li><a href="/index.html">🇬🇧 English</a></li>
-          <li><a href="/index-fa.html">🇮🇷 فارسی</a></li>
+          <li><a href="../pages/index.html">🇬🇧 English</a></li>
+          <li><a href="../pages/index-fa.html">🇮🇷 فارسی</a></li>
         </ul>
       </div>
     </div>
