--- a/components/footer-fa.html
+++ b/components/footer-fa.html
@@ -8,7 +8,7 @@
     <!-- 🔹 برند و مأموریت -->
     <div class="footer-col brand">
       <div class="footer-logo">
-        <img src="assets/taskhub-logo.svg" alt="لوگوی بیتا دیجیتال هاب" width="40" height="40" />
+        <img src="../assets/taskhub-logo.svg" alt="لوگوی بیتا دیجیتال هاب" width="40" height="40" />
         <div>
           <h3>بیتا دیجیتال هاب</h3>
           <p>تحول دیجیتال</p>
