--- a/components/footer-tools.html
+++ b/components/footer-tools.html
@@ -17,9 +17,9 @@
     <div class="footer-links">
       <h4 class="footer-heading">Quick Links</h4>
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../blog/index-blog.html">Blog</a></li>
-        <li><a href="../index.html#tools">Tools</a></li>
+        <li><a href="../pages/index.html">Home</a></li>
+        <li><a href="../pages/blog/index-blog.html">Blog</a></li>
+        <li><a href="../pages/tools/tools.html">Tools</a></li>
       </ul>
     </div>
 
@@ -38,8 +38,8 @@
   <div class="footer-bottom">
     <p>© 2025 Bita Digital Hub. All rights reserved.</p>
     <p class="footer-legal">
-      <a href="../privacy.html">Privacy Policy</a> ·
-      <a href="../terms.html">Terms of Service</a>
+      <a href="../pages/privacy.html">Privacy Policy</a> 
+      <a href="../pages/terms.html">Terms of Service</a>
     </p>
   </div>
 </footer>
