--- a/components/footer.html
+++ b/components/footer.html
@@ -9,7 +9,7 @@ Clean Structure • SEO Friendly • Works in All Pages
     <!-- 🔹 Brand -->
     <div class="footer-col brand">
       <div class="footer-logo">
-        <img src="/assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="40" height="40" />
+        <img src="../assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="40" height="40" />
         <div>
           <h3>Bita Digital Hub</h3>
           <p>Digital Transformation</p>
@@ -43,8 +43,8 @@ Clean Structure • SEO Friendly • Works in All Pages
         <li><a href="/l#about">About</a></li>
         <li><a href="/#services">Services</a></li>
         <li><a href="/#courses">Courses</a></li>
-        <li><a href="/pages/contact.html">Contact</a></li>
-        <li><a href="/pages/blog/index-blog.html">Blog</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="../pages/blog/index-blog.html">Blog</a></li>
       </ul>
     </div>
 
