--- a/components/header-tools.html
+++ b/components/header-tools.html
@@ -15,7 +15,7 @@
 
     <!-- 🔹 Back to Home Button -->
     <nav class="nav-links">
-      <a href="../index.html" class="btn primary back-btn">Back to Home</a>
+      <a href="../pages/index.html" class="btn primary back-btn">Back to Home</a>
     </nav>
 
   </div>
