--- a/components/header-blog.html
+++ b/components/header-blog.html
@@ -15,7 +15,7 @@
 
     <!-- Back Button -->
     <nav class="nav-links" id="blog-nav-links">
-      <a href="pages/index.html/#home" class="btn-primary back-btn">Back to Home</a>
+      <a href="pages/index.html#home" class="btn-primary back-btn">Back to Home</a>
     </nav>
 
     <!-- Mobile Menu -->
